// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<bolt-action-blocks> Component Basic usage 1`] = `
<bolt-action-blocks spacing="medium"
                    valign="start"
                    max-items-per-row="6"
>
  <ul class="c-bolt-action-blocks c-bolt-action-blocks--spacing-medium c-bolt-action-blocks--valign-start c-bolt-action-blocks--item-max-6">
    <li class="c-bolt-action-blocks__item">
      <bolt-action-block>
        <a class="c-bolt-action-block c-bolt-action-block--link"
           href="#!"
        >
          <div class="c-bolt-action-block__item">
            <bolt-icon name="download"
                       size="large"
            >
              <span class="c-bolt-icon c-bolt-icon--download c-bolt-icon--large">
                <svg class="c-bolt-icon__icon c-bolt-icon__icon--large">
                  <use xlink:href="#download">
                  </use>
                </svg>
              </span>
            </bolt-icon>
          </div>
          <div class="c-bolt-action-block__item c-bolt-action-block__text">
            Item 1
          </div>
        </a>
      </bolt-action-block>
    </li>
    <li class="c-bolt-action-blocks__item">
      <bolt-action-block>
        <a class="c-bolt-action-block c-bolt-action-block--link"
           href="#!"
        >
          <div class="c-bolt-action-block__item">
            <bolt-icon name="copy-to-clipboard"
                       size="large"
            >
              <span class="c-bolt-icon c-bolt-icon--copy-to-clipboard c-bolt-icon--large">
                <svg class="c-bolt-icon__icon c-bolt-icon__icon--large">
                  <use xlink:href="#copy-to-clipboard">
                  </use>
                </svg>
              </span>
            </bolt-icon>
          </div>
          <div class="c-bolt-action-block__item c-bolt-action-block__text">
            Item 2
          </div>
        </a>
      </bolt-action-block>
    </li>
    <li class="c-bolt-action-blocks__item">
      <bolt-action-block>
        <a class="c-bolt-action-block c-bolt-action-block--link"
           href="#!"
        >
          <div class="c-bolt-action-block__item">
            <bolt-icon name="calendar"
                       size="large"
            >
              <span class="c-bolt-icon c-bolt-icon--calendar c-bolt-icon--large">
                <svg class="c-bolt-icon__icon c-bolt-icon__icon--large">
                  <use xlink:href="#calendar">
                  </use>
                </svg>
              </span>
            </bolt-icon>
          </div>
          <div class="c-bolt-action-block__item c-bolt-action-block__text">
            Item 3
          </div>
        </a>
      </bolt-action-block>
    </li>
  </ul>
</bolt-action-blocks>
`;

exports[`<bolt-action-blocks> Component Border in between each block: false 1`] = `
<bolt-action-blocks spacing="medium"
                    valign="start"
                    max-items-per-row="6"
>
  <ul class="c-bolt-action-blocks c-bolt-action-blocks--spacing-medium c-bolt-action-blocks--valign-start c-bolt-action-blocks--item-max-6">
    <li class="c-bolt-action-blocks__item">
      <bolt-action-block>
        <a class="c-bolt-action-block c-bolt-action-block--link"
           href="#!"
        >
          <div class="c-bolt-action-block__item">
            <bolt-icon name="download"
                       size="large"
            >
              <span class="c-bolt-icon c-bolt-icon--download c-bolt-icon--large">
                <svg class="c-bolt-icon__icon c-bolt-icon__icon--large">
                  <use xlink:href="#download">
                  </use>
                </svg>
              </span>
            </bolt-icon>
          </div>
          <div class="c-bolt-action-block__item c-bolt-action-block__text">
            Item 1
          </div>
        </a>
      </bolt-action-block>
    </li>
    <li class="c-bolt-action-blocks__item">
      <bolt-action-block>
        <a class="c-bolt-action-block c-bolt-action-block--link"
           href="#!"
        >
          <div class="c-bolt-action-block__item">
            <bolt-icon name="copy-to-clipboard"
                       size="large"
            >
              <span class="c-bolt-icon c-bolt-icon--copy-to-clipboard c-bolt-icon--large">
                <svg class="c-bolt-icon__icon c-bolt-icon__icon--large">
                  <use xlink:href="#copy-to-clipboard">
                  </use>
                </svg>
              </span>
            </bolt-icon>
          </div>
          <div class="c-bolt-action-block__item c-bolt-action-block__text">
            Item 2
          </div>
        </a>
      </bolt-action-block>
    </li>
    <li class="c-bolt-action-blocks__item">
      <bolt-action-block>
        <a class="c-bolt-action-block c-bolt-action-block--link"
           href="#!"
        >
          <div class="c-bolt-action-block__item">
            <bolt-icon name="calendar"
                       size="large"
            >
              <span class="c-bolt-icon c-bolt-icon--calendar c-bolt-icon--large">
                <svg class="c-bolt-icon__icon c-bolt-icon__icon--large">
                  <use xlink:href="#calendar">
                  </use>
                </svg>
              </span>
            </bolt-icon>
          </div>
          <div class="c-bolt-action-block__item c-bolt-action-block__text">
            Item 3
          </div>
        </a>
      </bolt-action-block>
    </li>
  </ul>
</bolt-action-blocks>
`;

exports[`<bolt-action-blocks> Component Border in between each block: true 1`] = `
<bolt-action-blocks spacing="medium"
                    valign="start"
                    max-items-per-row="6"
                    borderless
>
  <ul class="c-bolt-action-blocks c-bolt-action-blocks--spacing-medium c-bolt-action-blocks--valign-start c-bolt-action-blocks--item-max-6 c-bolt-action-blocks--borderless">
    <li class="c-bolt-action-blocks__item">
      <bolt-action-block>
        <a class="c-bolt-action-block c-bolt-action-block--link"
           href="#!"
        >
          <div class="c-bolt-action-block__item">
            <bolt-icon name="download"
                       size="large"
            >
              <span class="c-bolt-icon c-bolt-icon--download c-bolt-icon--large">
                <svg class="c-bolt-icon__icon c-bolt-icon__icon--large">
                  <use xlink:href="#download">
                  </use>
                </svg>
              </span>
            </bolt-icon>
          </div>
          <div class="c-bolt-action-block__item c-bolt-action-block__text">
            Item 1
          </div>
        </a>
      </bolt-action-block>
    </li>
    <li class="c-bolt-action-blocks__item">
      <bolt-action-block>
        <a class="c-bolt-action-block c-bolt-action-block--link"
           href="#!"
        >
          <div class="c-bolt-action-block__item">
            <bolt-icon name="copy-to-clipboard"
                       size="large"
            >
              <span class="c-bolt-icon c-bolt-icon--copy-to-clipboard c-bolt-icon--large">
                <svg class="c-bolt-icon__icon c-bolt-icon__icon--large">
                  <use xlink:href="#copy-to-clipboard">
                  </use>
                </svg>
              </span>
            </bolt-icon>
          </div>
          <div class="c-bolt-action-block__item c-bolt-action-block__text">
            Item 2
          </div>
        </a>
      </bolt-action-block>
    </li>
    <li class="c-bolt-action-blocks__item">
      <bolt-action-block>
        <a class="c-bolt-action-block c-bolt-action-block--link"
           href="#!"
        >
          <div class="c-bolt-action-block__item">
            <bolt-icon name="calendar"
                       size="large"
            >
              <span class="c-bolt-icon c-bolt-icon--calendar c-bolt-icon--large">
                <svg class="c-bolt-icon__icon c-bolt-icon__icon--large">
                  <use xlink:href="#calendar">
                  </use>
                </svg>
              </span>
            </bolt-icon>
          </div>
          <div class="c-bolt-action-block__item c-bolt-action-block__text">
            Item 3
          </div>
        </a>
      </bolt-action-block>
    </li>
  </ul>
</bolt-action-blocks>
`;

exports[`<bolt-action-blocks> Component Deprecated props still render as expected 1`] = `
<bolt-action-blocks spacing="medium"
                    valign="center"
                    max-items-per-row="2"
                    borderless
>
  <ul class="c-bolt-action-blocks c-bolt-action-blocks--spacing-medium c-bolt-action-blocks--valign-center c-bolt-action-blocks--item-max-2 c-bolt-action-blocks--borderless">
    <li class="c-bolt-action-blocks__item">
      <bolt-action-block>
        <a class="c-bolt-action-block c-bolt-action-block--link"
           href="#!"
        >
          <div class="c-bolt-action-block__item">
            <bolt-icon name="download"
                       size="large"
            >
              <span class="c-bolt-icon c-bolt-icon--download c-bolt-icon--large">
                <svg class="c-bolt-icon__icon c-bolt-icon__icon--large">
                  <use xlink:href="#download">
                  </use>
                </svg>
              </span>
            </bolt-icon>
          </div>
          <div class="c-bolt-action-block__item c-bolt-action-block__text">
            Item 1
          </div>
        </a>
      </bolt-action-block>
    </li>
    <li class="c-bolt-action-blocks__item">
      <bolt-action-block>
        <a class="c-bolt-action-block c-bolt-action-block--link"
           href="#!"
        >
          <div class="c-bolt-action-block__item">
            <bolt-icon name="copy-to-clipboard"
                       size="large"
            >
              <span class="c-bolt-icon c-bolt-icon--copy-to-clipboard c-bolt-icon--large">
                <svg class="c-bolt-icon__icon c-bolt-icon__icon--large">
                  <use xlink:href="#copy-to-clipboard">
                  </use>
                </svg>
              </span>
            </bolt-icon>
          </div>
          <div class="c-bolt-action-block__item c-bolt-action-block__text">
            Item 2
          </div>
        </a>
      </bolt-action-block>
    </li>
    <li class="c-bolt-action-blocks__item">
      <bolt-action-block>
        <a class="c-bolt-action-block c-bolt-action-block--link"
           href="#!"
        >
          <div class="c-bolt-action-block__item">
            <bolt-icon name="calendar"
                       size="large"
            >
              <span class="c-bolt-icon c-bolt-icon--calendar c-bolt-icon--large">
                <svg class="c-bolt-icon__icon c-bolt-icon__icon--large">
                  <use xlink:href="#calendar">
                  </use>
                </svg>
              </span>
            </bolt-icon>
          </div>
          <div class="c-bolt-action-block__item c-bolt-action-block__text">
            Item 3
          </div>
        </a>
      </bolt-action-block>
    </li>
  </ul>
</bolt-action-blocks>
`;

exports[`<bolt-action-blocks> Component Subcomponent renders as expected 1`] = `
<bolt-action-block>
  <a class="c-bolt-action-block c-bolt-action-block--link"
     href="#!"
  >
    <div class="c-bolt-action-block__item">
      <bolt-icon name="download"
                 size="large"
      >
        <span class="c-bolt-icon c-bolt-icon--download c-bolt-icon--large">
          <svg class="c-bolt-icon__icon c-bolt-icon__icon--large">
            <use xlink:href="#download">
            </use>
          </svg>
        </span>
      </bolt-icon>
    </div>
    <div class="c-bolt-action-block__item c-bolt-action-block__text">
      Item 1
    </div>
  </a>
</bolt-action-block>
`;

exports[`<bolt-action-blocks> Component Vertical alignment of each block's content: center 1`] = `
<bolt-action-blocks spacing="medium"
                    valign="center"
                    max-items-per-row="6"
>
  <ul class="c-bolt-action-blocks c-bolt-action-blocks--spacing-medium c-bolt-action-blocks--valign-center c-bolt-action-blocks--item-max-6">
    <li class="c-bolt-action-blocks__item">
      <bolt-action-block>
        <a class="c-bolt-action-block c-bolt-action-block--link"
           href="#!"
        >
          <div class="c-bolt-action-block__item">
            <bolt-icon name="download"
                       size="large"
            >
              <span class="c-bolt-icon c-bolt-icon--download c-bolt-icon--large">
                <svg class="c-bolt-icon__icon c-bolt-icon__icon--large">
                  <use xlink:href="#download">
                  </use>
                </svg>
              </span>
            </bolt-icon>
          </div>
          <div class="c-bolt-action-block__item c-bolt-action-block__text">
            Item 1
          </div>
        </a>
      </bolt-action-block>
    </li>
    <li class="c-bolt-action-blocks__item">
      <bolt-action-block>
        <a class="c-bolt-action-block c-bolt-action-block--link"
           href="#!"
        >
          <div class="c-bolt-action-block__item">
            <bolt-icon name="copy-to-clipboard"
                       size="large"
            >
              <span class="c-bolt-icon c-bolt-icon--copy-to-clipboard c-bolt-icon--large">
                <svg class="c-bolt-icon__icon c-bolt-icon__icon--large">
                  <use xlink:href="#copy-to-clipboard">
                  </use>
                </svg>
              </span>
            </bolt-icon>
          </div>
          <div class="c-bolt-action-block__item c-bolt-action-block__text">
            Item 2
          </div>
        </a>
      </bolt-action-block>
    </li>
    <li class="c-bolt-action-blocks__item">
      <bolt-action-block>
        <a class="c-bolt-action-block c-bolt-action-block--link"
           href="#!"
        >
          <div class="c-bolt-action-block__item">
            <bolt-icon name="calendar"
                       size="large"
            >
              <span class="c-bolt-icon c-bolt-icon--calendar c-bolt-icon--large">
                <svg class="c-bolt-icon__icon c-bolt-icon__icon--large">
                  <use xlink:href="#calendar">
                  </use>
                </svg>
              </span>
            </bolt-icon>
          </div>
          <div class="c-bolt-action-block__item c-bolt-action-block__text">
            Item 3
          </div>
        </a>
      </bolt-action-block>
    </li>
  </ul>
</bolt-action-blocks>
`;

exports[`<bolt-action-blocks> Component Vertical alignment of each block's content: end 1`] = `
<bolt-action-blocks spacing="medium"
                    valign="end"
                    max-items-per-row="6"
>
  <ul class="c-bolt-action-blocks c-bolt-action-blocks--spacing-medium c-bolt-action-blocks--valign-end c-bolt-action-blocks--item-max-6">
    <li class="c-bolt-action-blocks__item">
      <bolt-action-block>
        <a class="c-bolt-action-block c-bolt-action-block--link"
           href="#!"
        >
          <div class="c-bolt-action-block__item">
            <bolt-icon name="download"
                       size="large"
            >
              <span class="c-bolt-icon c-bolt-icon--download c-bolt-icon--large">
                <svg class="c-bolt-icon__icon c-bolt-icon__icon--large">
                  <use xlink:href="#download">
                  </use>
                </svg>
              </span>
            </bolt-icon>
          </div>
          <div class="c-bolt-action-block__item c-bolt-action-block__text">
            Item 1
          </div>
        </a>
      </bolt-action-block>
    </li>
    <li class="c-bolt-action-blocks__item">
      <bolt-action-block>
        <a class="c-bolt-action-block c-bolt-action-block--link"
           href="#!"
        >
          <div class="c-bolt-action-block__item">
            <bolt-icon name="copy-to-clipboard"
                       size="large"
            >
              <span class="c-bolt-icon c-bolt-icon--copy-to-clipboard c-bolt-icon--large">
                <svg class="c-bolt-icon__icon c-bolt-icon__icon--large">
                  <use xlink:href="#copy-to-clipboard">
                  </use>
                </svg>
              </span>
            </bolt-icon>
          </div>
          <div class="c-bolt-action-block__item c-bolt-action-block__text">
            Item 2
          </div>
        </a>
      </bolt-action-block>
    </li>
    <li class="c-bolt-action-blocks__item">
      <bolt-action-block>
        <a class="c-bolt-action-block c-bolt-action-block--link"
           href="#!"
        >
          <div class="c-bolt-action-block__item">
            <bolt-icon name="calendar"
                       size="large"
            >
              <span class="c-bolt-icon c-bolt-icon--calendar c-bolt-icon--large">
                <svg class="c-bolt-icon__icon c-bolt-icon__icon--large">
                  <use xlink:href="#calendar">
                  </use>
                </svg>
              </span>
            </bolt-icon>
          </div>
          <div class="c-bolt-action-block__item c-bolt-action-block__text">
            Item 3
          </div>
        </a>
      </bolt-action-block>
    </li>
  </ul>
</bolt-action-blocks>
`;

exports[`<bolt-action-blocks> Component Vertical alignment of each block's content: medium 1`] = `
<bolt-action-blocks spacing="medium"
                    valign="start"
                    max-items-per-row="6"
>
  <ul class="c-bolt-action-blocks c-bolt-action-blocks--spacing-medium c-bolt-action-blocks--valign-start c-bolt-action-blocks--item-max-6">
    <li class="c-bolt-action-blocks__item">
      <bolt-action-block>
        <a class="c-bolt-action-block c-bolt-action-block--link"
           href="#!"
        >
          <div class="c-bolt-action-block__item">
            <bolt-icon name="download"
                       size="large"
            >
              <span class="c-bolt-icon c-bolt-icon--download c-bolt-icon--large">
                <svg class="c-bolt-icon__icon c-bolt-icon__icon--large">
                  <use xlink:href="#download">
                  </use>
                </svg>
              </span>
            </bolt-icon>
          </div>
          <div class="c-bolt-action-block__item c-bolt-action-block__text">
            Item 1
          </div>
        </a>
      </bolt-action-block>
    </li>
    <li class="c-bolt-action-blocks__item">
      <bolt-action-block>
        <a class="c-bolt-action-block c-bolt-action-block--link"
           href="#!"
        >
          <div class="c-bolt-action-block__item">
            <bolt-icon name="copy-to-clipboard"
                       size="large"
            >
              <span class="c-bolt-icon c-bolt-icon--copy-to-clipboard c-bolt-icon--large">
                <svg class="c-bolt-icon__icon c-bolt-icon__icon--large">
                  <use xlink:href="#copy-to-clipboard">
                  </use>
                </svg>
              </span>
            </bolt-icon>
          </div>
          <div class="c-bolt-action-block__item c-bolt-action-block__text">
            Item 2: this item has more text, so it can demonstrate the vertical alignment
          </div>
        </a>
      </bolt-action-block>
    </li>
    <li class="c-bolt-action-blocks__item">
      <bolt-action-block>
        <a class="c-bolt-action-block c-bolt-action-block--link"
           href="#!"
        >
          <div class="c-bolt-action-block__item">
            <bolt-icon name="calendar"
                       size="large"
            >
              <span class="c-bolt-icon c-bolt-icon--calendar c-bolt-icon--large">
                <svg class="c-bolt-icon__icon c-bolt-icon__icon--large">
                  <use xlink:href="#calendar">
                  </use>
                </svg>
              </span>
            </bolt-icon>
          </div>
          <div class="c-bolt-action-block__item c-bolt-action-block__text">
            Item 3
          </div>
        </a>
      </bolt-action-block>
    </li>
  </ul>
</bolt-action-blocks>
`;

exports[`<bolt-action-blocks> Component Vertical alignment of each block's content: small 1`] = `
<bolt-action-blocks spacing="small"
                    valign="start"
                    max-items-per-row="6"
>
  <ul class="c-bolt-action-blocks c-bolt-action-blocks--spacing-small c-bolt-action-blocks--valign-start c-bolt-action-blocks--item-max-6">
    <li class="c-bolt-action-blocks__item">
      <bolt-action-block>
        <a class="c-bolt-action-block c-bolt-action-block--link"
           href="#!"
        >
          <div class="c-bolt-action-block__item">
            <bolt-icon name="download"
                       size="large"
            >
              <span class="c-bolt-icon c-bolt-icon--download c-bolt-icon--large">
                <svg class="c-bolt-icon__icon c-bolt-icon__icon--large">
                  <use xlink:href="#download">
                  </use>
                </svg>
              </span>
            </bolt-icon>
          </div>
          <div class="c-bolt-action-block__item c-bolt-action-block__text">
            Item 1
          </div>
        </a>
      </bolt-action-block>
    </li>
    <li class="c-bolt-action-blocks__item">
      <bolt-action-block>
        <a class="c-bolt-action-block c-bolt-action-block--link"
           href="#!"
        >
          <div class="c-bolt-action-block__item">
            <bolt-icon name="copy-to-clipboard"
                       size="large"
            >
              <span class="c-bolt-icon c-bolt-icon--copy-to-clipboard c-bolt-icon--large">
                <svg class="c-bolt-icon__icon c-bolt-icon__icon--large">
                  <use xlink:href="#copy-to-clipboard">
                  </use>
                </svg>
              </span>
            </bolt-icon>
          </div>
          <div class="c-bolt-action-block__item c-bolt-action-block__text">
            Item 2: this item has more text, so it can demonstrate the vertical alignment
          </div>
        </a>
      </bolt-action-block>
    </li>
    <li class="c-bolt-action-blocks__item">
      <bolt-action-block>
        <a class="c-bolt-action-block c-bolt-action-block--link"
           href="#!"
        >
          <div class="c-bolt-action-block__item">
            <bolt-icon name="calendar"
                       size="large"
            >
              <span class="c-bolt-icon c-bolt-icon--calendar c-bolt-icon--large">
                <svg class="c-bolt-icon__icon c-bolt-icon__icon--large">
                  <use xlink:href="#calendar">
                  </use>
                </svg>
              </span>
            </bolt-icon>
          </div>
          <div class="c-bolt-action-block__item c-bolt-action-block__text">
            Item 3
          </div>
        </a>
      </bolt-action-block>
    </li>
  </ul>
</bolt-action-blocks>
`;

exports[`<bolt-action-blocks> Component Vertical alignment of each block's content: start 1`] = `
<bolt-action-blocks spacing="medium"
                    valign="start"
                    max-items-per-row="6"
>
  <ul class="c-bolt-action-blocks c-bolt-action-blocks--spacing-medium c-bolt-action-blocks--valign-start c-bolt-action-blocks--item-max-6">
    <li class="c-bolt-action-blocks__item">
      <bolt-action-block>
        <a class="c-bolt-action-block c-bolt-action-block--link"
           href="#!"
        >
          <div class="c-bolt-action-block__item">
            <bolt-icon name="download"
                       size="large"
            >
              <span class="c-bolt-icon c-bolt-icon--download c-bolt-icon--large">
                <svg class="c-bolt-icon__icon c-bolt-icon__icon--large">
                  <use xlink:href="#download">
                  </use>
                </svg>
              </span>
            </bolt-icon>
          </div>
          <div class="c-bolt-action-block__item c-bolt-action-block__text">
            Item 1
          </div>
        </a>
      </bolt-action-block>
    </li>
    <li class="c-bolt-action-blocks__item">
      <bolt-action-block>
        <a class="c-bolt-action-block c-bolt-action-block--link"
           href="#!"
        >
          <div class="c-bolt-action-block__item">
            <bolt-icon name="copy-to-clipboard"
                       size="large"
            >
              <span class="c-bolt-icon c-bolt-icon--copy-to-clipboard c-bolt-icon--large">
                <svg class="c-bolt-icon__icon c-bolt-icon__icon--large">
                  <use xlink:href="#copy-to-clipboard">
                  </use>
                </svg>
              </span>
            </bolt-icon>
          </div>
          <div class="c-bolt-action-block__item c-bolt-action-block__text">
            Item 2
          </div>
        </a>
      </bolt-action-block>
    </li>
    <li class="c-bolt-action-blocks__item">
      <bolt-action-block>
        <a class="c-bolt-action-block c-bolt-action-block--link"
           href="#!"
        >
          <div class="c-bolt-action-block__item">
            <bolt-icon name="calendar"
                       size="large"
            >
              <span class="c-bolt-icon c-bolt-icon--calendar c-bolt-icon--large">
                <svg class="c-bolt-icon__icon c-bolt-icon__icon--large">
                  <use xlink:href="#calendar">
                  </use>
                </svg>
              </span>
            </bolt-icon>
          </div>
          <div class="c-bolt-action-block__item c-bolt-action-block__text">
            Item 3
          </div>
        </a>
      </bolt-action-block>
    </li>
  </ul>
</bolt-action-blocks>
`;

exports[`<bolt-action-blocks> Component Vertical alignment of each block's content: xsmall 1`] = `
<bolt-action-blocks spacing="xsmall"
                    valign="start"
                    max-items-per-row="6"
>
  <ul class="c-bolt-action-blocks c-bolt-action-blocks--spacing-xsmall c-bolt-action-blocks--valign-start c-bolt-action-blocks--item-max-6">
    <li class="c-bolt-action-blocks__item">
      <bolt-action-block>
        <a class="c-bolt-action-block c-bolt-action-block--link"
           href="#!"
        >
          <div class="c-bolt-action-block__item">
            <bolt-icon name="download"
                       size="large"
            >
              <span class="c-bolt-icon c-bolt-icon--download c-bolt-icon--large">
                <svg class="c-bolt-icon__icon c-bolt-icon__icon--large">
                  <use xlink:href="#download">
                  </use>
                </svg>
              </span>
            </bolt-icon>
          </div>
          <div class="c-bolt-action-block__item c-bolt-action-block__text">
            Item 1
          </div>
        </a>
      </bolt-action-block>
    </li>
    <li class="c-bolt-action-blocks__item">
      <bolt-action-block>
        <a class="c-bolt-action-block c-bolt-action-block--link"
           href="#!"
        >
          <div class="c-bolt-action-block__item">
            <bolt-icon name="copy-to-clipboard"
                       size="large"
            >
              <span class="c-bolt-icon c-bolt-icon--copy-to-clipboard c-bolt-icon--large">
                <svg class="c-bolt-icon__icon c-bolt-icon__icon--large">
                  <use xlink:href="#copy-to-clipboard">
                  </use>
                </svg>
              </span>
            </bolt-icon>
          </div>
          <div class="c-bolt-action-block__item c-bolt-action-block__text">
            Item 2: this item has more text, so it can demonstrate the vertical alignment
          </div>
        </a>
      </bolt-action-block>
    </li>
    <li class="c-bolt-action-blocks__item">
      <bolt-action-block>
        <a class="c-bolt-action-block c-bolt-action-block--link"
           href="#!"
        >
          <div class="c-bolt-action-block__item">
            <bolt-icon name="calendar"
                       size="large"
            >
              <span class="c-bolt-icon c-bolt-icon--calendar c-bolt-icon--large">
                <svg class="c-bolt-icon__icon c-bolt-icon__icon--large">
                  <use xlink:href="#calendar">
                  </use>
                </svg>
              </span>
            </bolt-icon>
          </div>
          <div class="c-bolt-action-block__item c-bolt-action-block__text">
            Item 3
          </div>
        </a>
      </bolt-action-block>
    </li>
  </ul>
</bolt-action-blocks>
`;
